# vulkan_gaussian_splatting

./: CMakeLists.txt  README.md  main.cpp
include/: adam.h  camera.h  engine.h  gs_core.h  renderer.h  renderer_utils.h  vk_radix_sort.h
lib/: vk_radix_sort.h
shader/: compile.sh
shader/glsl/: adam.comp  argpass.comp  argpass2.comp  backward.comp  compact.comp  convolute.comp  convolute_backward.comp  density_control.comp  find_range.comp  mark_prune.comp  prefix_sum.comp  projection.comp  raster.comp  raster_train.comp  render.comp  scan_add.comp  scan_local.comp
shader/spv/: adam.spv  argpass.spv  argpass2.spv  backward.spv  compact.spv  convolute.spv  convolute_backward.spv  density_control.spv  find_range.spv  mark_prune.spv  prefix_sum.spv  proj.spv  projection.spv  range.spv  raster.spv  raster_train.spv  scan_add.spv  scan_local.spv
src/: cam.cpp  engine.cpp  engine_utils.cpp  gs_core.cpp  renderer.cpp  renderer_utils.cpp
